# single_source

./: .gitignore  README.md
cmake/: CMakeLists.txt
include/: Configure.h  File.h  Interval.h  Pathname.h  State.h
include/cfg/: Setting.h
include/defn/file/: Mode.h  Offset.h  Position.h  Size.h  Way.h
include/defn/mgmt/pathname/: Key.h
include/defn/rec/: Size.h  Status.h
include/defn/state/msg/: Tag.h
include/file/: Input.h  Output.h
include/file/format/: Linear.h
include/file/format/tree/avl/: Node.decl.h  Node.defn.h  Node.h  Pointer.decl.h
include/file/imp/std/: Filebuf.h
include/file/intf/: Format.h
include/intf/: File.h  Record.h  State.h
include/intf/file/: Input.h  Output.h
include/intf/state/: Character.h  Message.decl.h  Message.h  Symbol.h
include/mgmt/: File.h  Pathname.h
include/mgmt/file/: Pointer.h
include/mgmt/pathname/: Cache.h  Temporary.h
include/mgmt/pathname/rec/: Linear.h  Tree.h
include/pathname/: Management.h
include/pathname/mgmt/rec/: Name.h  Tree.h
include/struc/tree/: AVL.h
include/struc/tree/avl/intf/: Edge.h  Node.h  (+2 more)
src/: Configure.cpp  File.cpp  Pathname.cpp  SingleSource.cpp
src/file/: Input.cpp  Output.cpp
src/file/format/: Linear.cpp
src/file/imp/std/: Filebuf.cpp
src/intf/: Record.cpp
src/intf/file/: Input.cpp  Output.cpp
src/mgmt/: File.cpp  Pathname.cpp
src/mgmt/file/: Pointer.cpp
src/mgmt/pathname/: Cache.cpp  Temporary.cpp
src/mgmt/pathname/rec/: Linear.cpp  Tree.cpp
src/pathname/: Management.cpp
src/pathname/mgmt/rec/: Name.cpp  Tree.cpp
src/struc/tree/: AVL.cpp
(+15 files in other folders)
